# emphasis-trainer

./: .gitmodules  Cargo.toml  LICENSE  README.md  Trunk.toml  build.rs  bulma-15dd0cce4edeb77.css  bulma-5935ed2e230ff77a.css  bulma-8257eecd1c95bd2d.css  index-1428893a4449f0df.js  index-1428893a4449f0df_bg.wasm  index-34f5c30d91c5cfde.js  index-34f5c30d91c5cfde_bg.wasm  index-41af78faf854d766.js  index-41af78faf854d766_bg.wasm  index-426505891e2d935b.js  index-426505891e2d935b_bg.wasm  index-9667bd34052aec91.js  index-9667bd34052aec91_bg.wasm  index-d90fffd15411eb53.js  index-d90fffd15411eb53_bg.wasm  index.html  rus-emphasis-26577e468a949ef8.js  rus-emphasis-26577e468a949ef8_bg.wasm  rus-emphasis-6ef0e6c8d51ef007.js  rus-emphasis-6ef0e6c8d51ef007_bg.wasm  rus-emphasis-7a48e7e24f41bb00.js  rus-emphasis-7a48e7e24f41bb00_bg.wasm  rus-emphasis-941b5320ef477074.js  rus-emphasis-941b5320ef477074_bg.wasm  rus-emphasis-a1bae6ec8f264ec0.js  rus-emphasis-a1bae6ec8f264ec0_bg.wasm  rus-emphasis-a4daa5f339a34ad1.js  rus-emphasis-a4daa5f339a34ad1_bg.wasm  rus-emphasis-c9fe7bba3cfbeb77.js  rus-emphasis-c9fe7bba3cfbeb77_bg.wasm  style-26e2ce651a1115ba.css  style-285198e14d4db9ff.css  style-39fa7894db2349f7.css  style-874a1607d53e5940.css  (+1 more)
.github/workflows/: deploy.yml
bulma/sass/elements/: button.sass
src/: failure.rs  header.rs  main.rs  question.rs  test.html  util.rs
src/model/: data.txt  mod.rs  parse.rs  statistics.rs  variant.rs  word.rs
