[package]
name = "rus-emphasis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
getrandom = { version = "0.2.5", features = ["js"] }
rand = "0.8.5"
thiserror = "1.0.30"
yew = "0.19"
gloo = "0.6.1"
wasm-bindgen = "0.2.79"
web-sys = { version = "0.3.56", features = ["HtmlButtonElement"] }
fxhash = "0.2.1"
