[package]
name = "rus-emphasis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
gloo = "0.6.1"
web-sys = { version = "0.3.56", features = ["HtmlButtonElement"] }
wasm-bindgen = "0.2.79"

anyhow = "1.0.56"
thiserror = "1.0.31"

getrandom = { version = "0.2.5", features = ["js"] }
rand = "0.8.5"

serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

fxhash = "0.2.1"
indexmap = { version = "1.8.1", features = ["serde"] }
chrono = { version = "0.4.19", features = ["wasmbind", "serde"] }
